[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "move-audit-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "snowflake-id>=0.1.0",
    "flask-restful>=0.3.10",
    "pysui>=0.82.0",
    "httpx[socks]>=0.27.2",
    "requests>=2.32.3",
    "autogen-agentchat>=0.5.5",
    "autogen-ext[azure,openai]>=0.5.5",
    "chromadb>=1.0.7",
    "mcp>=1.6.0",
    "markitdown>=0.1.1",
    "markdown>=3.8",
    "weasyprint>=65.1",
    "pydyf>=0.11.0",
    "flask-cors>=5.0.1",
]

[tool.setuptools]
packages = ["app"]
